--- a/package.json
+++ b/package.json
@@ -21,13 +21,28 @@
     "@angular/platform-browser": "^20.0.0",
     "@angular/platform-browser-dynamic": "^20.0.0",
     "@angular/router": "^20.0.0",
+    "@capacitor-community/speech-recognition": "^7.0.1",
+    "@capacitor-community/text-to-speech": "^6.1.0",
+    "@capacitor-mlkit/barcode-scanning": "^7.4.0",
+    "@capacitor/android": "^7.4.4",
     "@capacitor/app": "7.1.0",
+    "@capacitor/browser": "^7.0.2",
+    "@capacitor/camera": "^7.0.2",
     "@capacitor/core": "7.4.4",
+    "@capacitor/geolocation": "^7.1.6",
     "@capacitor/haptics": "7.0.2",
     "@capacitor/keyboard": "7.0.3",
+    "@capacitor/local-notifications": "^7.0.4",
+    "@capacitor/preferences": "^7.0.3",
     "@capacitor/status-bar": "7.0.3",
+    "@capgo/capacitor-flash": "^7.1.20",
+    "@google/model-viewer": "^4.1.0",
     "@ionic/angular": "^8.0.0",
+    "@ngx-translate/core": "^17.0.0",
+    "@ngx-translate/http-loader": "^17.0.0",
+    "@types/leaflet": "^1.9.21",
     "ionicons": "^7.0.0",
+    "leaflet": "^1.9.4",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.15.0"
